1주차 과제 6번